--- a/src/style.css
+++ b/src/style.css
@@ -11,5 +11,10 @@ body{
     align-items: center;
     justify-items: center;
     text-align: center;
+    width: 500px;
+}
+
+img{
+    max-width: 500px;
 }
 
