--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,9 @@ body{
     height: 100vh;
     background-color: antiquewhite;
     color: balck;
+    text-align: center;
+    display: flex;
+    justify-content: center;
     
 }
 #content{
@@ -10,11 +13,17 @@ body{
     flex-direction: column;
     align-items: center;
     justify-items: center;
-    text-align: center;
+    
     width: 500px;
 }
 
 img{
-    max-width: 500px;
+    width: 100%;
+
+}
+
+#copy{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.5rem;
 }
 
