--- a/src/style.css
+++ b/src/style.css
@@ -1,29 +1,46 @@
+/* reset */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body{
     width: 100vw;
-    height: 100vh;
-    background-color: antiquewhite;
-    color: balck;
+    
+    background-color: rgb(250, 235, 215);
+    color: black;
     text-align: center;
     display: flex;
     justify-content: center;
     
 }
-#content{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-items: center;
+
+header{
     
-    width: 500px;
-}
-
-img{
     width: 100%;
-
+    height: 150px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    align-content: center;
+    justify-content: space-between;
+    background:rgb(238, 200, 151) ;
 }
 
-#copy{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.5rem;
+header .logo{
+   
+    margin-left: 80px;
 }
 
+header nav {
+ margin-right: 80px ;
+ width: 200px;
+ 
+}
+ul{
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
