--- a/src/style.css
+++ b/src/style.css
@@ -7,9 +7,11 @@
 
 body{
     width: 100vw;
+    overflow-x: hidden;
     
     background-color: rgb(250, 235, 215);
     color: black;
+
     
    
     
@@ -55,5 +57,19 @@ ul{
   margin-right: auto;
   width: 50%;
   min-width: 350px;
+  border-radius: 5px;
 margin-top: 80px;
+
+}
+
+.copyText{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 80px;
+    margin-bottom: 80px;
+    width: 100%;
+    max-width: 800px;
+    
+    text-align: center;
 }
