--- a/src/style.css
+++ b/src/style.css
@@ -73,3 +73,12 @@ margin-top: 80px;
     
     text-align: center;
 }
+footer{
+    
+    width: 100%;
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background:rgb(238, 200, 151) ;
+}
