--- a/src/style.css
+++ b/src/style.css
@@ -66,8 +66,17 @@ body{
 .homeImage{
     width: 200px
 }
+
+.menu{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 0 80px;
+}
+
 .menu-item{
-    width: 250px;
+    width: 300px;
+    height: 300px;
     background-color: var(--darker);
     color: #f5f5f5;
 }
