--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,8 @@ body{
 }
 
 .main{
+    margin-top: 80px;
+    margin-bottom: 80px;
     min-height: 800px;
     display: flex;
   align-items: center;
@@ -61,7 +63,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content:space-evenly;
 }
 .homeImage{
     width: 200px
@@ -72,6 +74,9 @@ body{
     flex-wrap: wrap;
     gap: 20px;
     padding: 0 80px;
+    justify-content: center;
+    cursor: pointer;
+    
 }
 
 .menu-item{
@@ -79,8 +84,26 @@ body{
     height: 300px;
     background-color: var(--darker);
     color: #f5f5f5;
+    padding: 20px 8px
 }
 .menu-item img{
     width: 180px;
     height: 180px;
+}
+
+.contact{
+ width: 600px;
+ height: 600px;
+ background-color: var(--darker);
+ color: #f5f5f5;
+ display: flex;
+ flex-direction: column;
+ justify-content: space-evenly;
+ align-items: center;
+}
+
+.contact img{
+    width: 450px;
+    height: 266px;
+    border-radius: 20px;
 }
