--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,15 @@ body{
 }
 .footer{
     background:var(--dark);
+    display: flex;
+   
+    align-items: center;
+    justify-content: center;
+}
+.footer a{
+    color: #f5f5f5;
+    text-align: none;
+    cursor: pointer;
 }
 
 .restaurant-name{
@@ -43,8 +52,25 @@ body{
 
 .header nav{
     position: absolute;
-    right: 5px;
+    right: 1.5rem;
     bottom: 5px;
+}
+.button-nav{
+    background: none;
+    border: none;
+    color: #f5f5f5;
+    text-decoration: underline;
+    margin-right: 1rem;
+    font-size: 1.6rem;
+    cursor: pointer;
+    transition: all .2s ease-out;
+}
+
+.button-nav:hover{
+    transform: translate(1.2);
+}
+.button-nav:active{
+    transform: translate(0.9);
 }
 
 .main{
