--- a/src/style.css
+++ b/src/style.css
@@ -3,11 +3,17 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
+html{
+    font-size: 16px;
+}
+/* Google font */
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;500&family=Rye&family=Satisfy&display=swap');
 
 :root{
     --dark: rgba(47, 47, 47, 0.612);
-    --darker: rgba(41, 41, 41, 0.879);
+    --darker: rgba(13, 13, 13, 0.879);
 }
 
 body{
@@ -17,6 +23,7 @@ body{
    background-image: url("./assets/burgers/wallpaper.jpg");
    background-size: cover;
     color: rgb(255, 255, 255);
+    font-family: 'Dosis', sans-serif;
     display: grid;
     grid-template-columns: auto ;
   grid-template-rows: 200px 1fr 100px;
@@ -38,12 +45,16 @@ body{
    position: relative;
     align-items: center;
     justify-content: center;
+    font-family: 'Satisfy', cursive;
+    font-size: 1.6rem;
 }
 .footer a{
+   
     color: #f5f5f5;
     text-align: none;
     cursor: pointer;
     position:absolute;
+   
     top: 67%;
     left: 50%;
     transform: translate(-50%, 0)
@@ -54,6 +65,8 @@ body{
 
 .restaurant-name{
     margin-top: 50px;
+    font-size: 3.2rem;
+    font-family: 'Rye', cursive;
 }
 
 
@@ -97,6 +110,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content:space-evenly;
+    font-size: 1.6rem;
 }
 .homeImage{
     width: 200px
@@ -113,11 +127,15 @@ body{
 }
 
 .menu-item{
-    width: 300px;
-    height: 300px;
+    width: 350px;
+    height: 350px;
     background-color: var(--darker);
     color: #f5f5f5;
-    padding: 20px 8px
+    padding: 20px 8px;
+    font-size: 1.4rem;
+}
+.menu-item h2{
+    font-size: 2rem;
 }
 .menu-item img{
     width: 180px;
@@ -133,6 +151,7 @@ body{
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
+ font-size: 2rem;
 }
 
 .contact img{
