--- a/src/style.css
+++ b/src/style.css
@@ -133,7 +133,14 @@ body{
     color: #f5f5f5;
     padding: 20px 8px;
     font-size: 1.4rem;
+    transition:all .25s ease-out;
 }
+
+.menu-item:hover{
+    transform: scale(1.6);
+    background-color: black;
+}
+
 .menu-item h2{
     font-size: 2rem;
 }
