--- a/src/style.css
+++ b/src/style.css
@@ -110,8 +110,13 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content:space-evenly;
-    font-size: 1.6rem;
+    font-size: 2rem;
 }
+.home p:first-child{
+    font-weight: 900;
+    font-size: 2.6rem;
+}
+
 .homeImage{
     width: 200px
 }
