--- a/src/style.css
+++ b/src/style.css
@@ -94,6 +94,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 .home {
   background: var(--darker);
@@ -123,6 +125,9 @@ body {
   padding: 0 80px;
   justify-content: center;
   cursor: pointer;
+  /* improve experience on phones */
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .menu-item:first-child img {
@@ -153,8 +158,11 @@ body {
 }
 
 .contact {
-  width: 600px;
-  height: 600px;
+    width: 60%;
+    min-height: 600px;
+  max-width: 600px;
+  min-width: 387px;
+  
   background-color: var(--darker);
   color: #f5f5f5;
   display: flex;
@@ -165,7 +173,9 @@ body {
 }
 
 .contact img {
-  width: 450px;
-  height: 266px;
-  border-radius: 20px;
+    max-width: 450px;
+    width: 50%;
+    min-width: 300px;
+    max-height: 266px;
+    border-radius: 20px;
 }
